@@ -7,9 +7,9 @@ Lane,Sample_ID,Sample_Name,GenomeFolder,Index,bait_name,default_library_type,def
 2,14798981,ERS804066,,CGATGT,,RNA-seq dUTP eukaryotic,CGATGT,,jec@sanger.ac.uk ncb@sanger.ac.uk nw6@sanger.ac.uk,nw6@sanger.ac.uk,ncb@sanger.ac.uk,jec@sanger.ac.uk,0,0,,,,,7955,S0518,82,ZF molecular phenotype,,,from:100 to:300,ERS804066,,Danio rerio,,Total RNA from a single zebrafish embryo%2C heterozygous for tcf3b%2C allele zf157Tg collected at 80%25 epiboly.,,2363877,3749STDY6166877,tcf3b_heterozygous_B2,,,888,ERP011114,1,0,0,Total RNA was extracted from zebrafish embryos at 80%25 epiboly and genotyped for tcf3a and tcf3b to identify wild type%2C heterozygous and homozygous knockout embryos. The RNA was DNase treated.  Stranded RNAseq libraries were constructed using the Illumina TruSeq Stranded RNA protocol with oligo dT pulldown.%0A%0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,3749,Transcriptome profiling of zebrafish tcf3a and tcf3b knockout embryos,Danio_rerio (zv9),,Transcriptome profiling of zebrafish tcf3a and tcf3b knockout embryos,2,
 2,14798993,ERS804067,,TTAGGC,,RNA-seq dUTP eukaryotic,TTAGGC,,jec@sanger.ac.uk ncb@sanger.ac.uk nw6@sanger.ac.uk,nw6@sanger.ac.uk,ncb@sanger.ac.uk,jec@sanger.ac.uk,0,0,,,,,7955,S0518,82,ZF molecular phenotype,,,from:100 to:300,ERS804067,,Danio rerio,,Total RNA from a single zebrafish embryo%2C heterozygous for tcf3b%2C allele zf157Tg collected at 80%25 epiboly.,,2363878,3749STDY6166878,tcf3b_heterozygous_C2,,,888,ERP011114,1,0,0,Total RNA was extracted from zebrafish embryos at 80%25 epiboly and genotyped for tcf3a and tcf3b to identify wild type%2C heterozygous and homozygous knockout embryos. The RNA was DNase treated.  Stranded RNAseq libraries were constructed using the Illumina TruSeq Stranded RNA protocol with oligo dT pulldown.%0A%0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,3749,Transcriptome profiling of zebrafish tcf3a and tcf3b knockout embryos,Danio_rerio (zv9),,Transcriptome profiling of zebrafish tcf3a and tcf3b knockout embryos,3,
 2,12172503,phiX_for_spiked_buffers,,ACAACGCAATC,,,ACAACGCAATC,,hps@sanger.ac.uk,,hps@sanger.ac.uk,hps@sanger.ac.uk,1,0,,,PhiXBPS24Oct14,,10847,,,,,,,,,,,,,1255141,phiX_for_spiked_buffers,,,,888,,1,0,0,None,198,Illumina Controls,,,,888,
-3,14848484,ERS812459,,ATCACG,,RNA-seq dUTP eukaryotic,ATCACG,,mg16@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,mg16@sanger.ac.uk,0,0,,,,,10090,S0815,1608,RNA sequencing of mouse haemopoietic cells,,,from:100 to:300,ERS812459,,Mus musculus,,Total RNA extracted from Lin_neg_bone marrow,,2377275,3291STDY6178377,DSMX47_4E,,,888,ERP006862,1,0,0,Comprehensive analysis of AML genomes has revealed co-occurring mutations in DNA and%0Ahistone modifying enzymes suggesting their crucial role in tumourigenesis. To gain inside into%0Athe role of those genes in AML we generated mouse models recapitulating mutations in part%0Aof the most frequent ones. We hypothesise that aberrant chromatin modification and%0Aunderlying effect on gene expression largely contribute to leukemogenesis. To test this%0Ahypothesis we propose to compare gene expression and DNA and histone modification in the%0Apresence or absence of single gene mutation in mouse hematopoietic stem and progenitor%0Acompartment in a pre-leukaemia setting. Characterisation of these models will inform the%0Abiology of AML%2C identify potential therapeutic targets and provide platforms for the%0Aassessment of novel therapeutics.%0A%0A%0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,3291,RNA sequencing of mouse haemopoietic cells 2014%2F15,Mus_musculus (GRCm38 + ensembl_75_transcriptome),,RNA sequencing of mouse haemopoietic cells 2014%2F15,1,
+3,14848484,ERS812459,,ATCACG,,RNA-seq dUTP eukaryotic,ATCACG,,mg16@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,mg16@sanger.ac.uk,0,0,,,,,10090,S0815,1608,RNA sequencing of mouse haemopoietic cells,,,from:100 to:300,ERS812459,,Mus musculus,,Total RNA extracted from Lin_neg_bone marrow,,2377275,3291STDY6178377,DSMX47_4E,,,888,ERP006862,1,0,0,Comprehensive analysis of AML genomes has revealed co-occurring mutations in DNA and%0Ahistone modifying enzymes suggesting their crucial role in tumourigenesis. To gain inside into%0Athe role of those genes in AML we generated mouse models recapitulating mutations in part%0Aof the most frequent ones. We hypothesise that aberrant chromatin modification and%0Aunderlying effect on gene expression largely contribute to leukemogenesis. To test this%0Ahypothesis we propose to compare gene expression and DNA and histone modification in the%0Apresence or absence of single gene mutation in mouse hematopoietic stem and progenitor%0Acompartment in a pre-leukaemia setting. Characterisation of these models will inform the%0Abiology of AML%2C identify potential therapeutic targets and provide platforms for the%0Aassessment of novel therapeutics.%0A%0A%0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,3291,RNA sequencing of mouse haemopoietic cells 2014%2F15,Mus_musculus (GRCm38 + ensembl_75_transcriptome) [star],,RNA sequencing of mouse haemopoietic cells 2014%2F15,1,
 3,14848496,ERS812460,,CGATGT,,RNA-seq dUTP eukaryotic,CGATGT,,mg16@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,mg16@sanger.ac.uk,0,0,,,,,10090,S0815,1608,RNA sequencing of mouse haemopoietic cells,,,from:100 to:300,ERS812460,,Mus musculus,,Total RNA extracted from Lin_neg_bone marrow,,2377276,3291STDY6178378,DSMX47_4F,,,888,ERP006862,1,0,0,Comprehensive analysis of AML genomes has revealed co-occurring mutations in DNA and%0Ahistone modifying enzymes suggesting their crucial role in tumourigenesis. To gain inside into%0Athe role of those genes in AML we generated mouse models recapitulating mutations in part%0Aof the most frequent ones. We hypothesise that aberrant chromatin modification and%0Aunderlying effect on gene expression largely contribute to leukemogenesis. To test this%0Ahypothesis we propose to compare gene expression and DNA and histone modification in the%0Apresence or absence of single gene mutation in mouse hematopoietic stem and progenitor%0Acompartment in a pre-leukaemia setting. Characterisation of these models will inform the%0Abiology of AML%2C identify potential therapeutic targets and provide platforms for the%0Aassessment of novel therapeutics.%0A%0A%0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,3291,RNA sequencing of mouse haemopoietic cells 2014%2F15,Mus_musculus (GRCm38 + ensembl_75_transcriptome),,RNA sequencing of mouse haemopoietic cells 2014%2F15,2,
-3,14848508,ERS812461,,TTAGGC,,RNA-seq dUTP eukaryotic,TTAGGC,,mg16@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,mg16@sanger.ac.uk,0,0,,,,,10090,S0815,1608,RNA sequencing of mouse haemopoietic cells,,,from:100 to:300,ERS812461,,Mus musculus,,Total RNA extracted from Lin_neg_bone marrow,,2377277,3291STDY6178379,DSMX47_4G,,,888,ERP006862,1,0,0,Comprehensive analysis of AML genomes has revealed co-occurring mutations in DNA and%0Ahistone modifying enzymes suggesting their crucial role in tumourigenesis. To gain inside into%0Athe role of those genes in AML we generated mouse models recapitulating mutations in part%0Aof the most frequent ones. We hypothesise that aberrant chromatin modification and%0Aunderlying effect on gene expression largely contribute to leukemogenesis. To test this%0Ahypothesis we propose to compare gene expression and DNA and histone modification in the%0Apresence or absence of single gene mutation in mouse hematopoietic stem and progenitor%0Acompartment in a pre-leukaemia setting. Characterisation of these models will inform the%0Abiology of AML%2C identify potential therapeutic targets and provide platforms for the%0Aassessment of novel therapeutics.%0A%0A%0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,3291,RNA sequencing of mouse haemopoietic cells 2014%2F15,Mus_musculus (GRCm38 + ensembl_75_transcriptome),,RNA sequencing of mouse haemopoietic cells 2014%2F15,3,
+3,14848508,ERS812461,,TTAGGC,,RNA-seq dUTP eukaryotic,TTAGGC,,mg16@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,mg16@sanger.ac.uk,0,0,,,,,10090,S0815,1608,RNA sequencing of mouse haemopoietic cells,,,from:100 to:300,ERS812461,,Mus musculus,,Total RNA extracted from Lin_neg_bone marrow,,2377277,3291STDY6178379,DSMX47_4G,,,888,ERP006862,1,0,0,Comprehensive analysis of AML genomes has revealed co-occurring mutations in DNA and%0Ahistone modifying enzymes suggesting their crucial role in tumourigenesis. To gain inside into%0Athe role of those genes in AML we generated mouse models recapitulating mutations in part%0Aof the most frequent ones. We hypothesise that aberrant chromatin modification and%0Aunderlying effect on gene expression largely contribute to leukemogenesis. To test this%0Ahypothesis we propose to compare gene expression and DNA and histone modification in the%0Apresence or absence of single gene mutation in mouse hematopoietic stem and progenitor%0Acompartment in a pre-leukaemia setting. Characterisation of these models will inform the%0Abiology of AML%2C identify potential therapeutic targets and provide platforms for the%0Aassessment of novel therapeutics.%0A%0A%0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,3291,RNA sequencing of mouse haemopoietic cells 2014%2F15,Mus_musculus (GRCm38 + ensembl_75_transcriptome) [star],,RNA sequencing of mouse haemopoietic cells 2014%2F15,3,
 3,12172503,phiX_for_spiked_buffers,,ACAACGCAATC,,,ACAACGCAATC,,hps@sanger.ac.uk,,hps@sanger.ac.uk,hps@sanger.ac.uk,1,0,,,PhiXBPS24Oct14,,10847,,,,,,,,,,,,,1255141,phiX_for_spiked_buffers,,,,888,,1,0,0,None,198,Illumina Controls,,,,888,
 4,14848484,ERS812459,,ATCACG,,RNA-seq dUTP eukaryotic,ATCACG,,mg16@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,mg16@sanger.ac.uk,0,0,,,,,10090,S0815,1608,RNA sequencing of mouse haemopoietic cells,,,from:100 to:300,ERS812459,,Mus musculus,,Total RNA extracted from Lin_neg_bone marrow,,2377275,3291STDY6178377,DSMX47_4E,,,888,ERP006862,1,0,0,Comprehensive analysis of AML genomes has revealed co-occurring mutations in DNA and%0Ahistone modifying enzymes suggesting their crucial role in tumourigenesis. To gain inside into%0Athe role of those genes in AML we generated mouse models recapitulating mutations in part%0Aof the most frequent ones. We hypothesise that aberrant chromatin modification and%0Aunderlying effect on gene expression largely contribute to leukemogenesis. To test this%0Ahypothesis we propose to compare gene expression and DNA and histone modification in the%0Apresence or absence of single gene mutation in mouse hematopoietic stem and progenitor%0Acompartment in a pre-leukaemia setting. Characterisation of these models will inform the%0Abiology of AML%2C identify potential therapeutic targets and provide platforms for the%0Aassessment of novel therapeutics.%0A%0A%0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,3291,RNA sequencing of mouse haemopoietic cells 2014%2F15,Mus_musculus (GRCm38 + ensembl_84_transcriptome) [aligneroranalysisxyz],,RNA sequencing of mouse haemopoietic cells 2014%2F15,1,
 4,14848496,ERS812460,,CGATGT,,RNA-seq dUTP eukaryotic,CGATGT,,mg16@sanger.ac.uk ncb@sanger.ac.uk,,ncb@sanger.ac.uk,mg16@sanger.ac.uk,0,0,,,,,10090,S0815,1608,RNA sequencing of mouse haemopoietic cells,,,from:100 to:300,ERS812460,,Mus musculus,,Total RNA extracted from Lin_neg_bone marrow,,2377276,3291STDY6178378,DSMX47_4F,,,888,ERP006862,1,0,0,Comprehensive analysis of AML genomes has revealed co-occurring mutations in DNA and%0Ahistone modifying enzymes suggesting their crucial role in tumourigenesis. To gain inside into%0Athe role of those genes in AML we generated mouse models recapitulating mutations in part%0Aof the most frequent ones. We hypothesise that aberrant chromatin modification and%0Aunderlying effect on gene expression largely contribute to leukemogenesis. To test this%0Ahypothesis we propose to compare gene expression and DNA and histone modification in the%0Apresence or absence of single gene mutation in mouse hematopoietic stem and progenitor%0Acompartment in a pre-leukaemia setting. Characterisation of these models will inform the%0Abiology of AML%2C identify potential therapeutic targets and provide platforms for the%0Aassessment of novel therapeutics.%0A%0A%0AThis data is part of a pre-publication release. For information on the proper use of pre-publication data shared by the Wellcome Trust Sanger Institute (including details of any publication moratoria)%2C please see http%3A%2F%2Fwww.sanger.ac.uk%2Fdatasharing%2F,3291,RNA sequencing of mouse haemopoietic cells 2014%2F15,Mus_musculus (GRCm38 + ensembl_84_transcriptome) [star],,RNA sequencing of mouse haemopoietic cells 2014%2F15,2,
